Minor refactor in CSS

--- a/app/styles/impress.md.scss
+++ b/app/styles/impress.md.scss
@@ -5,29 +5,19 @@
     width: 900px;
     padding: 40px;
 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing:    border-box;
-    -ms-box-sizing:     border-box;
-    -o-box-sizing:      border-box;
-    box-sizing:         border-box;
+    box-sizing: border-box;
 
     font-family: 'PT Serif', georgia, serif;
 
     font-size: 48px;
     line-height: 1.5;
-}
 
-.step {
-    -webkit-transition: opacity 1s;
-    -moz-transition:    opacity 1s;
-    -ms-transition:     opacity 1s;
-    -o-transition:      opacity 1s;
-    transition:         opacity 1s;
-}
+    transition: opacity 1s;
 
-/* fade out inactive slides */
-.step:not(.active) {
-    opacity: 0.3;
+    // fade out inactive slides
+    &:not(.active) {
+        opacity: 0.3;
+    }
 }
 
 /*
