--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,19 @@ body {
     background: #fafafa;
 }
 
+.layers {
+    position: relative;
+    width: 560px;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.layer {
+    position: absolute;
+}
+
 .zoom-item {
     border-width: 3px;
 
