Add content for 3d layers test

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,3 +74,39 @@ body {
 .impress-group-zoom-test-child {
     @include zoom-child;
 }
+
+
+$layer-x: 480px;
+$layer-z: 300px;
+$layer-z-margin: 100px;
+$layer-rotate-x: 70deg;
+$layer-rotate-y: 45deg;
+
+.layer {
+    transform: rotateY($layer-rotate-y) rotateX($layer-rotate-x) translateZ($layer-z);
+    transition: transform 1s ease;
+}
+
+.present {
+    @for $i from 1 through 3 {
+        #layer#{$i} {
+            transform: rotateY($layer-rotate-y) rotateX($layer-rotate-x) translateZ($layer-z-margin * $i + $layer-z);
+            transition-delay: 0.8s;
+        }
+    }
+}
+
+.impress-on-layers-detail {
+    @for $i from 1 through 3 {
+        #layer#{$i} {
+            opacity: 1;
+            transform: rotateY($layer-rotate-y) rotateX($layer-rotate-x) translateX(($i - 2) * $layer-x) translateZ($layer-z);
+        }
+    }
+}
+
+.impress-group-layers-test {
+    .layers-3d {
+        opacity: 1;
+    }
+}
